gcc/testsuite/rust/rustc/ui/foreign/stashed-issue-121451.rs
extern "C" fn _f() -> libc::uintptr_t {}
// { dg-error ".E0433." "" { target *-*-* } .-1 }

fn main() {}

